--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 body {
   background-color: rgba(0, 0, 0, 0.884);
   color: #03C4A1;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 a {
@@ -22,4 +23,36 @@ a:hover {
 
 .fa {
   font-size: 40px;
+}
+
+.navbar {
+  padding-left: 80px;
+}
+
+.landing {
+  font-family: 'GSL (Global StarCraft League)', sans-serif;
+  font-style: italic;
+  background-color: rgba(0, 0, 0, 0.808);
+  padding-bottom: 20vh;
+  padding-top: 20vh;
+}
+
+.landing h1 {
+  font-size: 80px;
+}
+
+.landing h2 {
+  font-size: 60px;
+}
+
+.about {
+  padding-bottom: 8vh;
+  padding-top: 3vh;
+  padding-left: 10vh;
+  padding-right: 10vh;
+}
+
+.para {
+  padding-left: 80px;
+  padding-right: 80px;
 }
