--- a/src/style.css
+++ b/src/style.css
@@ -85,3 +85,23 @@ a:hover {
 .icons {
   margin-left: 8px;
 }
+
+.details {
+  display: none;
+  position: absolute;
+  top: 35px;
+  left: 0;
+  width: 100%;
+  height: 75%;
+}
+
+.card:hover .details {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  opacity: 1;
+}
+
+.card:hover .card-img {
+  opacity: .2;
+}
