--- a/src/style.css
+++ b/src/style.css
@@ -99,9 +99,11 @@ a:hover {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  opacity: 1;
+  font-weight: bolder;
+  font-size: 18px;
+  text-align: center;
 }
 
 .card:hover .card-img {
-  opacity: .2;
+  opacity: .1;
 }
